fix: saved-news page horizontal scroll on 521-532px dimensions

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -65,9 +65,9 @@
   }
 
   .about__image {
-    max-width: 232px;
+    max-width: 272px;
     width: 100%;
-    height: 232px;
+    height: 272px;
     margin-top: 21px;
   }
 
